2001-08-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/gsdoc/Base.gsdoc: Documented all the uses of
	environment variables I could find.
	* Source/NSUserDefaults.m: __createArgumentDictionary ... handle
	property lists as arguments correctly.
	* Source/NSUser.m: Added GSTooldDirectory to listable paths.

2001-07-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFCallInvocation.m: attempt to guess type signature
	when compiler gives us an untyped selector.
	* Headers/Foundation/NSObject.h: ASSIGN(), ASSIGNCOPY(), minor
	reordering to make these macros thread-safe.

2001-07-30  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSObjCRuntime.h: Export additional functions
	and variables for Windows DLLs.
	* Headers/gnustep/base/NSObject.h: Likewise.
	* Headers/gnustep/base/Unicode.h: Likewise.

	* Headers/gnustep/base/preface.h.in: Define __WIN32__ ifndef on 
	MINGW32.

	* Testing/nsarray.m: Use NSCParameterAssert.
	* Testing/nsconnection.m: Cleanup for MinGW/Cygwin.

Sat Jul 21 23:25:14 2001  Wim Oudshoorn
	* Source/NSHost.m ([NSHost +hostWithName:]):
	Added forgotten argument to NSLog().

2001-07-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/UnixFileHandle.m: Don't abort aread/write attempts that
	fail on EAGAIN or EINTR ... retry them instead.  Avoid unexpected
	exceptions when trying to write a large volume of data quicker
	then the output device can handle.
	* Source/WindowsFileHandle.m: ditto

2001-07-19  Adam Fedor  <fedor@gnu.org>

	* Documentation/readme.texi: Explain the license for GNUstep more
	clearly.
	* README: Regen.

Thu Jul 19 12:41:22 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* config/config.objc.m: New file.
	* configure.in: Added new test to check whether Objective-C really
	works.  If it doesn't, abort immediately telling the user to fix
	their compiler installation first.
	(AC_CHECK_HEADERS): Don't check for libguile.h
	* configure: Regenerated.
	
2001-07-17  Richard Frith-Macdonald <rfm@gnu.org>
